sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {

	var inverse = 1
	var x=1 
	
	while(inverse != 0){
		
		for( i <- 0 to getNombreValeurs()-2 ){
			if (getValeur(i+1)<getValeur(i)){
				echange(i,i+1)
				x=x+1
			}
		}
			

			valeur = 0 
			for( i <- getNombreValeurs()-2 to 0 by -1){
				var x=0
				for (j<-0 to i){
					if (getValeur(j+1)<getValeur(j)){
					echange(j+1,j) 
					x=1
					}
				}

			}
		}
}

